--- a/src/projects.json
+++ b/src/projects.json
@@ -1,6 +1,17 @@
 [
   {
     "name": "Pomodoro Timer",
+    "description": " Temporizador con tiempos de concentracion y descanso. Permite configurar los colores de fondo, la duracion de cada temporizador y los intervalos entre ellos. Tambien, puedo crear, editar, ordenar(drag & drop), completar y eliminar tareas. Posee diseño responsivo y sonidos. Es una replica similar a la pagina ",
+    "techs": ["typescript", "react", "tailwindcss"],
+    "images": [
+      "https://i.ibb.co/G7KzPKb/pomodoro-Timer-Screenshot1.webp",
+      "https://i.ibb.co/1MZtdML/pomodoro-Timer-Screenshot2.webp",
+      "https://i.ibb.co/WkvFPMH/pomodoro-Timer-Screenshot3.webp"
+    ],
+    "link": "https:/github.io/Markucho18"
+  },
+  {
+    "name": "E-Commmerce",
     "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, officia cupiditate. Nostrum ducimus, pariatur quasi iste nam aut autem doloribus hic esse laborum aliquam. Praesentium dolorum doloremque at amet ea rerum laudantium! Esse tenetur itaque ex veritatis pariatur perspiciatis voluptates ipsum? Explicabo corrupti consequuntur eos nobis culpa aliquam! Accusantium, magni.",
     "techs": ["typescript", "react", "tailwindcss"],
     "images": ["https://i.ibb.co/xC8Qyqc/default-Screenshot.webp", "https://i.ibb.co/xC8Qyqc/default-Screenshot.webp"],
@@ -8,22 +19,15 @@
   },
   {
     "name": "Minesweeper",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, officia cupiditate. Nostrum ducimus, pariatur quasi iste nam aut autem doloribus hic esse laborum aliquam. Praesentium dolorum doloremque at amet ea rerum laudantium! Esse tenetur itaque ex veritatis pariatur perspiciatis voluptates ipsum? Explicabo corrupti consequuntur eos nobis culpa aliquam! Accusantium, magni.",
+    "description": "El clasico buscaminas hecho con arrays y estados globales, tipado y estilizado. Permite cambiar la dificultad y una experiencia de juego casi identica al original.",
     "techs": ["typescript", "react", "tailwindcss"],
     "images": ["https://i.ibb.co/xC8Qyqc/default-Screenshot.webp", "https://i.ibb.co/xC8Qyqc/default-Screenshot.webp"],
     "link": "https:/github.io/Markucho18"
   },
   {
-    "name": "Pomodoro Timer",
+    "name": "Login Python",
     "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, officia cupiditate. Nostrum ducimus, pariatur quasi iste nam aut autem doloribus hic esse laborum aliquam. Praesentium dolorum doloremque at amet ea rerum laudantium! Esse tenetur itaque ex veritatis pariatur perspiciatis voluptates ipsum? Explicabo corrupti consequuntur eos nobis culpa aliquam! Accusantium, magni.",
-    "techs": ["typescript", "react", "tailwindcss"],
-    "images": ["https://i.ibb.co/xC8Qyqc/default-Screenshot.webp", "https://i.ibb.co/xC8Qyqc/default-Screenshot.webp"],
-    "link": "https:/github.io/Markucho18"
-  },
-  {
-    "name": "Minesweeper",
-    "description": "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, officia cupiditate. Nostrum ducimus, pariatur quasi iste nam aut autem doloribus hic esse laborum aliquam. Praesentium dolorum doloremque at amet ea rerum laudantium! Esse tenetur itaque ex veritatis pariatur perspiciatis voluptates ipsum? Explicabo corrupti consequuntur eos nobis culpa aliquam! Accusantium, magni.",
-    "techs": ["typescript", "react", "tailwindcss"],
+    "techs": ["python", "sql", "css"],
     "images": ["https://i.ibb.co/xC8Qyqc/default-Screenshot.webp", "https://i.ibb.co/xC8Qyqc/default-Screenshot.webp"],
     "link": "https:/github.io/Markucho18"
   }
